# petra

./: .gitpod.yml  Cargo.toml  Improvments.md  README.md
.cargo/: config.toml
.github/workflows/: rust.yml  showcase.yml
backends/petra-python/: Cargo.toml
backends/petra-python/src/: lib.rs
backends/petra-rust/: Cargo.toml
backends/petra-rust/src/: lib.rs
crates/petra/: Cargo.toml
crates/petra-backend/: Cargo.toml
crates/petra-backend-core/: Cargo.toml
crates/petra-backend-core-derive/: Cargo.toml
crates/petra-backend-core-derive/src/: lib.rs
crates/petra-backend-core/src/: configuration.rs  defs.rs  error.rs  lib.rs  utils.rs
crates/petra-backend-core/src/traits/: format.rs  helper.rs  mod.rs  simple_language.rs
crates/petra-backend-csharp/: Cargo.toml
crates/petra-backend-csharp/src/: configuration.rs  lib.rs
crates/petra-backend-golang/: Cargo.toml
crates/petra-backend-golang/src/: configuration.rs  lib.rs
crates/petra-backend-python/: Cargo.toml
crates/petra-backend-python/src/: lib.rs
crates/petra-backend-rust/: Cargo.toml
crates/petra-backend-rust/src/: lib.rs
crates/petra-backend/src/: config.rs  lib.rs
crates/petra-core/src/: lib.rs  schema.rs
crates/petra-frontend/: Cargo.toml  build.rs  petra.pest
crates/petra-frontend/src/: lib.rs  parser.rs
crates/petra-frontend/tests/: integration_test.rs
crates/petra/src/: args.rs  backend_type.rs  lib.rs  main.rs
crates/petra/src/args/: cpp.rs  csharp.rs  golang.rs  java.rs  mod.rs
impls/petra-backend-cpp/: Cargo.toml
impls/petra-backend-cpp/src/: configuration.rs  lib.rs
impls/petra-backend-csharp/: Cargo.toml
impls/petra-backend-csharp/src/: lib.rs
impls/petra-backend-golang/: Cargo.toml
impls/petra-backend-golang/src/: lib.rs
impls/petra-backend-java/: Cargo.toml
impls/petra-backend-java/src/: configuration.rs  lib.rs
impls/petra-backend-js/: Cargo.toml
impls/petra-backend-js/src/: lib.rs
impls/petra-backend-python/: Cargo.toml
impls/petra-backend-python/src/: lib.rs
impls/petra-backend-rust/: Cargo.toml
impls/petra-backend-ts/: Cargo.toml
impls/petra-backend-ts/src/: lib.rs
petra/: Cargo.toml
petra-core/: Cargo.toml
petra-core/src/: lib.rs
petra/src/: lib.rs  main.rs
scripts/: cpp.sh  csharp.sh  golang.sh  java.sh  js.sh  python.sh  rust.sh  setup.sh  ts.sh
showcase/: schema.petra
showcase/red_cpp/: CMakeLists.txt
showcase/red_cpp/cmake/: ClangFormat.cmake
showcase/red_cpp/include/: defs copy.h  defs.h
showcase/red_cpp/test/: CMakeLists.txt  test_main.cpp
showcase/red_csharp/: .editorconfig  Directory.Build.props  red_csharp.sln
showcase/red_csharp/RedCsharp/: Defs.cs
showcase/red_csharp/RedCsharp.Tests/: RedCsharp.Tests.csproj  UnitTest.cs  UnitTest1.cs
showcase/red_golang/: .golangci.yml  go.mod
showcase/red_golang/pkg/defs/: defs.go  defs_test.go
showcase/red_java/: settings.gradle.kts
showcase/red_java/config/checkstyle/: checkstyle.xml  suppressions.xml
showcase/red_java/lib/: build.gradle.kts
showcase/red_java/lib/src/main/java/red_java/: Defs.java
showcase/red_java/lib/src/test/java/red_java/: DefsTest.java
showcase/red_js/: .eslintrc.yml  package.json  pnpm-lock.yaml
showcase/red_js/src/: defs.js  index.js
showcase/red_js/tests/: index.test.js
showcase/red_python/: .gitignore  pyproject.toml
showcase/red_python/red_python/: model.py
showcase/red_python/tests/: test_model.py  test_rock_names.py
showcase/red_rust/: Cargo.toml
showcase/red_rust/src/: model.rs
showcase/red_rust/tests/: integration_test.rs
showcase/red_ts/: .eslintrc.yml  package.json  pnpm-lock.yaml  tsconfig.json
showcase/red_ts/src/: defs.ts  index.ts
showcase/red_ts/tests/: index.test.ts
