[package]
name = "petra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
petra-core = { path = "../petra-core", version = "0.1.0" }
petra-python = { path = "../backends/petra-python", version = "0.1.0" }