[package]
name = "petra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
petra-core = { path = "../petra-core", version = "0.1.0" }
petra-python = { path = "../backends/petra-python", version = "0.1.0" }
petra-rust = { path = "../backends/petra-rust", version = "0.1.0" }