[package]
name = "petra-backend-core-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = { version = "1.0.32", default-features = false }
syn = { version = "2.0.27", default-features = false }

[lib]
proc-macro = true
