[package]
name = "petra-backend-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petra-core = { path = "../petra-core", version = "0.1.0" }
petra-backend-core-derive = { path = "../petra-backend-core-derive", version = "0.1.0" }
thiserror = "1.0.43"
