[package]
name = "petra-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petra-backend-core = { path = "../petra-backend-core", version = "0.1.0" }
petra-core = { path = "../petra-core", version = "0.1.0" }

# T0
petra-backend-python = { path = "../../impls/petra-backend-python", version = "0.1.0", optional = true }
petra-backend-rust = { path = "../../impls/petra-backend-rust", version = "0.1.0", optional = true }
petra-backend-golang = { path = "../../impls/petra-backend-golang", version = "0.1.0", optional = true }
petra-backend-csharp = { path = "../../impls/petra-backend-csharp", version = "0.1.0", optional = true }
petra-backend-java = { path = "../../impls/petra-backend-java", version = "0.1.0", optional = true }

[features]
python = ["dep:petra-backend-python"]
rust = ["dep:petra-backend-rust"]
golang = ["dep:petra-backend-golang"]
csharp = ["dep:petra-backend-csharp"]
java = ["dep:petra-backend-java"]