[package]
name = "petra-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petra-backend-core = { path = "../petra-backend-core", version = "0.1.0" }
petra-core = { path = "../petra-core", version = "0.1.0" }

# T0
petra-backend-python = { path = "../../impls/petra-backend-python", version = "0.1.0", optional = true }
petra-backend-rust = { path = "../../impls/petra-backend-rust", version = "0.1.0", optional = true }
petra-backend-golang = { path = "../../impls/petra-backend-golang", version = "0.1.0", optional = true }
petra-backend-csharp = { path = "../../impls/petra-backend-csharp", version = "0.1.0", optional = true }
petra-backend-java = { path = "../../impls/petra-backend-java", version = "0.1.0", optional = true }
petra-backend-js = { path = "../../impls/petra-backend-js", version = "0.1.0", optional = true }
petra-backend-ts = { path = "../../impls/petra-backend-ts", version = "0.1.0", optional = true }
petra-backend-cpp = { path = "../../impls/petra-backend-cpp", version = "0.1.0", optional = true }

[features]
lang_python = ["dep:petra-backend-python"]
lang_rust = ["dep:petra-backend-rust"]
lang_golang = ["dep:petra-backend-golang"]
lang_csharp = ["dep:petra-backend-csharp"]
lang_java = ["dep:petra-backend-java"]
lang_js = ["dep:petra-backend-js"]
lang_ts = ["dep:petra-backend-ts"]
lang_cpp = ["dep:petra-backend-cpp"]