[package]
name = "petra-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.0"
pest_derive = "2.7.0"
petra-core = { path = "../petra-core", version = "0.1.0" }
thiserror = "1.0.43"
tracing = "0.1.37"

[dev-dependencies]
pretty_assertions = "1.4.0"