[package]
name = "petra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
petra-core = { path = "../petra-core", version = "0.1.0" }
petra-backend = { path = "../petra-backend", version = "0.1.0" }
petra-frontend = { path = "../petra-frontend", version = "0.1.0" }
