[package]
name = "petra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
petra-core = { path = "../petra-core", version = "0.1.0" }
petra-backend = { path = "../petra-backend", version = "0.1.0" }
petra-frontend = { path = "../petra-frontend", version = "0.1.0" }

[features]
default = [
    "lang_T0",
]
lang_T0 = [
    "lang_python",
    "lang_rust",
    "lang_golang",
    "lang_csharp",
    "lang_java",
    "lang_ts",
    "lang_js",
]
lang_python = ["petra-backend/lang_python"]
lang_rust = ["petra-backend/lang_rust"]
lang_golang = ["petra-backend/lang_golang"]
lang_csharp = ["petra-backend/lang_csharp"]
lang_java = ["petra-backend/lang_java"]
lang_js = ["petra-backend/lang_js"]
lang_ts = ["petra-backend/lang_ts"]
